<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY app_name "Palette">]>

<resources>

    <!-- For application and activities -->
    <string name="app_name">&app_name;</string>
    <string name="title_activity_crop">Edit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Names -->
    <string name="root_name">Root</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="folder_list">Folders</string>

    <!-- Preference keys -->
    <string name="preference_file_key">iced.egret.palette.PREFERENCES_KEY</string>
    <string name="sd_card_uri_key">iced.egret.palette.SD_CARD_URI_KEY</string>
    <string name="primary_color_key">iced.egret.palette.PRIMARY_COLOR</string>
    <string name="accent_color_key">iced.egret.palette.ACCENT_COLOR</string>
    <string name="toolbar_item_color_key">iced.egret.palette.TOOLBAR_ITEM_COLOR</string>
    <string name="pager_toolbar_color_key">iced.egret.palette.PAGER_TOOLBAR_COLOR</string>
    <string name="true_zoom_key">iced.egret.palette.TRUE_ZOOM</string>
    <string name="waiting_room_autoclear_key">iced.egret.palette.AUTO_CLEAR</string>
    <string name="sd_card_grant_key">iced.egret.palette.GRANT_SD_CARD</string>

    <!-- Preference names -->
    <string name="appearance_header">Appearance</string>
    <string name="primary_color_preference">Primary Color</string>
    <string name="accent_color_preference">Accent Color</string>
    <string name="toolbar_item_color_preference">Toolbar Item Color</string>
    <string name="pager_header">Picture Pager</string>
    <string name="pager_toolbar_color_preference">Primary Color in Toolbars</string>
    <string name="true_zoom_preference">True Zoom</string>
    <string name="waiting_room_header">Waiting Room</string>
    <string name="waiting_room_autoclear_preference">Automatically Clear After Organizing</string>
    <string name="permissions_header">Permissions</string>
    <string name="sd_card_grant_permission">Grant SD Card Access</string>

    <!-- Preference summaries -->
    <string name="pager_toolbar_color_summary">Turn off to use default black color</string>
    <string name="true_zoom_summary">
        Show pictures as-is. Enabling allows large pictures to be viewed clearly, at the cost of increased load times.
    </string>
    <string name="waiting_room_autoclear_summary">
        Enable to automatically clear items after moving them or adding them to albums.
        Disable to always clear manually.
    </string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_grant_sd">Grant SD Card Access</string>
    <string name="action_select">Select</string>
    <string name="action_select_all">Select All</string>
    <string name="action_delete">Delete</string>
    <string name="action_hide">Hide</string>
    <string name="action_create_album">Create Album</string>
    <string name="action_add_to_album">Add to Album</string>
    <string name="action_remove_from_album">Remove from this Album</string>
    <string name="action_view_details">View Details</string>
    <string name="action_crop">Crop</string>
    <string name="action_share">Share</string>
    <string name="action_go_to_home_folder">Go To Home Folder</string>
    <string name="action_save_file">Save File</string>
    <string name="action_replace_file">Replace File</string>
    <string name="action_move">Move</string>
    <string name="action_rename">Rename</string>
    <string name="action_empty_recycle_bin">Empty Recycle Bin</string>
    <string name="action_restore">Restore</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_clear">Clear</string>
    <string name="action_apply">Apply</string>
    <string name="action_show_sync_folders">Synced Folders</string>
    <string name="action_sync_to_album">Sync to Album</string>
    <string name="action_set_as_cover">Set As Cover</string>
    <string name="action_reset_cover">Reset Cover</string>

    <!-- Menu switches/checkboxes -->
    <string name="switch_true_zoom">True Zoom</string>

    <!-- Menu states -->
    <string name="drawer_toggle">Toggle Drawer</string>

    <!-- Strings indicate what buttons or objects represent -->
    <string name="label_album_actions">Album Actions</string>
    <string name="label_item_type">Item Type</string>

    <!-- Successes -->
    <string name="file_save_success">File saved</string>
    <string name="success_move_generic">Successfully moved</string>
    <string name="success_add_generic">Successfully added</string>
    <string name="success_delete_generic">Successfully deleted</string>
    <string name="success_move_to_recycle">Successfully moved to recycle bin</string>
    <string name="success_set_cover">Cover set</string>
    <string name="success_reset_cover">Cover reset to default</string>
    <string name="success_sync">Successfully synchronized</string>
    <string name="success_sd_connect">Successfully connected to SD card</string>

    <!-- Errors -->
    <string name="title_permission_error">Permission request failed!</string>
    <string name="message_permission_error">
        You have not given &app_name; permission to access your photos,
        which is required for it to work.
    </string>
    <string name="edit_fail_error">Failed to save changes!</string>
    <string name="already_exists_error">File already exists at this location!</string>
    <string name="no_albums_exist_error">You haven\'t made any albums yet. Go to left panel to create one</string>
    <string name="no_albums_available_error">Item already belongs to all existing albums</string>
    <string name="synced_is_not_removable_error">Pictures belonging to a synced folder cannot be removed!</string>
    <string name="access_denied_error">Access to storage was denied. Make sure access to this SD card is enabled in Settings.</string>
    <string name="generic_error">Something went wrong!</string>
    <string name="storage_fail_error_explain">If using an SD card, make sure access is enabled in Settings.</string>
    <string name="error_sd_access">Failed to gain SD card access!</string>
    <string name="error_sd_connect">Failed to gain SD card access!</string>

    <!-- For dialogs -->
    <string name="title_album_form">New Album</string>
    <string name="hint_set_name">Name goes here</string>
    <string name="title_delete_album_confirm">Delete Albums?</string>
    <string name="message_delete_album_confirm">This action is irreversible. You are NOT deleting pictures.</string>
    <string name="title_remove">Remove</string>
    <string name="message_replace_file">File with this name already exists. Are you sure you want to replace it?</string>
    <string name="folder_empty">Folder is empty!</string>
    <string name="warning_generic">Are you sure?</string>
    <string name="grant_sd_explain">
        Due to Android security policies, you must manually approve access to the SD card
        on the next screen, by opening the SD card and clicking "select" at the bottom.
    </string>
    <string name="grant_sd_instructions_button">How?</string>
    <string name="grant_sd_instructions_link">https://metactrl.com/docs/sdcard-on-lollipop/</string>

    <!-- For picture details -->
    <string name="title_path">File Path</string>
    <string name="title_type">File Type</string>
    <string name="title_size">File Size</string>
    <string name="title_dimensions">Dimensions</string>
    <string name="title_orientation">Orientation</string>
    <string name="title_modified">Last Modified</string>
    <string name="title_created">Creation Date</string>

    <!-- For selections -->
    <string name="action_selected_one">%1$d item selected</string>
    <string name="action_selected_many">%1$d items selected</string>

    <!-- For intents -->
    <string name="intent_item_key">item</string>
    <string name="intent_album_path_key">album_path</string>
    <string name="intent_synced_folder_paths">synced_folder_paths</string>
    <string name="intent_go_home">go_home</string>

    <!-- Crop ratio buttons -->
    <string name="ratio_1x1">1:1</string>
    <string name="ratio_4x3">4:3</string>
    <string name="ratio_16x9">16:9</string>
    <string name="ratio_free">Free</string>
    <string name="ratio_reset">Reset</string>

    <!-- Misc -->
    <string name="empty_list">Nothing to see here</string>
    <string name="share_intent_title">Send to…</string>

</resources>
