<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/albumActions"
        android:title="@string/label_album_actions"
        android:orderInCategory="1"
        android:icon="@drawable/ic_photo_album_black_24dp"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:visible="false"
        >
        <menu>
            <item
                android:id="@+id/actionAddToAlbum"
                android:title="@string/action_add_to_album"
                android:visible="false"
                />
            <item
                android:id="@+id/actionRemoveFromAlbum"
                android:title="@string/action_remove_from_album"
                android:visible="false"
                />
        </menu>
    </item>

    <item
        android:id="@+id/actionDelete"
        android:orderInCategory="2"
        android:icon="@drawable/ic_delete_black_24dp"
        app:iconTint="@color/white"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

</menu>