<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ratio_free"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/ratio_free"
        android:text="@string/ratio_free"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/ratio_1x1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/ratio_1x1"
        android:text="@string/ratio_1x1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/ratio_4x3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/ratio_4x3"
        android:text="@string/ratio_4x3"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/ratio_16x9"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/ratio_16x9"
        android:text="@string/ratio_16x9"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/ratio_reset"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/ratio_reset"
        android:text="@string/ratio_reset"
        android:textColor="@color/white" />

</LinearLayout>